[package]
name = "executor-relayer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
hyper = { version = "0.14.32", features = ["http1", "server", "stream", "tcp"] }
route-engine = { path = "../route-engine" }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
xroute-service-shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
