[package]
name = "xroute-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
executor-relayer = { path = "../executor-relayer" }
hyper = { version = "0.14.32", features = ["http1", "server", "stream", "tcp"] }
quote-service = { path = "../quote-service" }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
xroute-service-shared = { path = "../shared" }
